fix some a11y color contrast issues (#3845)
* fix service icon colors


* more a11y color fixes


* remove package-lock


* more a11y color fixes


* adjusted gray soln


* more fixes


* revert things the ux team didnt want


* sigh


* more color fixes for compliance graphs

--- a/components/automate-ui/src/app/page-components/attributes/attributes.component.scss
+++ b/components/automate-ui/src/app/page-components/attributes/attributes.component.scss
@@ -18,7 +18,7 @@
   font-weight: bold;
 
   .count {
-    color: inherit;
+    color: $chef-dark-grey;
   }
 
   .fa {
@@ -55,7 +55,7 @@
   h3 {
     margin: 0;
     font-size: inherit;
-    color: inherit;
+    color: $chef-dark-grey;
     font-weight: inherit;
   }
 
@@ -101,7 +101,7 @@
 
         .results {
           font-size: 12px;
-          color: $chef-blue-medium;
+          color: $chef-primary-bright;
           margin-right: 6px;
 
           &.none {
@@ -111,7 +111,7 @@
 
         .reset {
           display: inline-block;
-          color: $chef-blue-medium;
+          color: $chef-primary-bright;
           background-color: #F7F7F7;
           cursor: pointer;
           padding: 6px 8px;
@@ -128,7 +128,7 @@
       border: none;
       font-size: 20px;
       text-align: center;
-      color: $chef-blue-medium;
+      color: $chef-primary-bright;
       background: #F7F7F7;
     }
   }
@@ -140,7 +140,7 @@
 
   .expand-collapse {
     font-size: 13px;
-    color: $link-blue;
+    color: $chef-primary-bright;
     margin-bottom: 16px;
 
     .action {
