--- a/components/automate-ui/src/app/page-components/converge-radial-graph/converge-radial-graph.component.scss
+++ b/components/automate-ui/src/app/page-components/converge-radial-graph/converge-radial-graph.component.scss
@@ -27,7 +27,7 @@
 
       .success {
         font-size: inherit;
-        color: $chef-primary-bright;
+        color: $chef-success;
       }
 
       .failure {
@@ -61,8 +61,8 @@ chef-radial-chart {
   }
 
   ::ng-deep .missing {
-    color: $chef-grey;
-    fill: $chef-grey;
-    stroke: $chef-grey;
+    color: $chef-dark-grey;
+    fill: $chef-dark-grey;
+    stroke: $chef-dark-grey;
   }
 }
