--- a/components/automate-ui/src/app/page-components/delta-viewer/delta-viewer.component.scss
+++ b/components/automate-ui/src/app/page-components/delta-viewer/delta-viewer.component.scss
@@ -28,4 +28,8 @@
   .d2h-diff-tbody > tr > td {
     height: 49px;
   }
+
+  .d2h-lines-added {
+    color: $chef-green;
+  }
 }
