--- a/components/automate-ui/src/styles/_colors.scss
+++ b/components/automate-ui/src/styles/_colors.scss
@@ -51,16 +51,17 @@ $blue: #174AF0;
 $malibu: #648FFF;
 // secondary
 $pink: #DC267F;
-$violet: #C22DD5;
+$violet: #A424B4;
 $indigo: #785EF0;
 $science-blue: #0075DB;
+$medium-teal-blue: #005BAB;
 $fuchsia: #A424B4;
 $fuchsia-light: #FADAFA;
 $fuchsia-dark: #440F4B;
 $maroon: #BA1E6A;
 // greyscale
 $charcoal: #26293A;
-$sirocco: #6F7878;
+$sirocco: #697272;
 $darksea: #819BA9;
 $steel: #CDD7DD;
 $iron: #DFE3E5;
@@ -70,6 +71,7 @@ $white: #FFFFFF;
 $black: #000000;
 // charts
 $atomic-tangerine: #FF9654;
+$mahogany: #B74500;
 $blue-de-france: #3DA5FF;
 $gray: #B7BCBC;
 
@@ -99,7 +101,7 @@ $chef-blue-medium: #3883B3;
 $chef-blue-light: #57ABE0;
 $chef-blue-lighter: #E8F3FA;
 $chef-purple: #9013FE;
-$chef-green: #1FB899;
+$chef-green: #307E30;
 $chef-light-green: #3DC5AA;
 $chef-red: #E27C79;
 $blue-light: #E1E5EC;
