--- a/components/chef-ui-library/src/atoms/chef-checkbox/chef-checkbox.scss
+++ b/components/chef-ui-library/src/atoms/chef-checkbox/chef-checkbox.scss
@@ -48,6 +48,7 @@ chef-checkbox {
   }
 
   &[aria-disabled] {
+    border: var(--chef-grey);
     opacity: 0.5;
     cursor: default;
     pointer-events: none;
