--- a/components/chef-ui-library/src/global/variables.css
+++ b/components/chef-ui-library/src/global/variables.css
@@ -14,10 +14,10 @@
   --royal-blue: #3864F2;
   --malibu: #648FFF;
   --pink: #DC267F;
-  --violet: #C22DD5;
+  --violet: #A424B4;
   --indigo: #785EF0;
   --science-blue: #0075DB;
-  --sirocco: #6F7878;
+  --sirocco: #697272;
   --iron: #DFE3E5;
   --mystic: #E6EBEE;
   --haze: #F3F6F8;
